// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericField render() renders text as TextInput 1`] = `
<TextField
  disabled={false}
  formState="Ready"
  help={null}
  hideErrorMessage={false}
  key="field-name"
  label="field label*"
  name="field-name"
  required={true}
  type="text"
/>
`;

exports[`GenericField render() renders text with choices as Select2TextInput 1`] = `
<Select2TextField
  allowClear={false}
  allowEmpty={false}
  choices={Array []}
  disabled={false}
  escapeMarkup={true}
  formState="Ready"
  help={null}
  hideErrorMessage={false}
  key="field-name"
  label="field label*"
  multiple={false}
  name="field-name"
  placeholder="--"
  required={true}
  type="text"
/>
`;
